# parquet-duckdb

./: .gitignore  README.md  _quarto.yml  columns-good-rows-bad.qmd  demos.py  pyproject.toml
docs/: columns-good-rows-bad.html  columns-good-rows-bad.pptx  index.html  robots.txt  search.json  sitemap.xml
