[project]
name = "parquet-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow-stubs>=20.0.0.20250618",
    "pyarrow>=20.0.0",
    "pandas-stubs>=2.2.3.250527",
    "matplotlib>=3.10.3",
]
